[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/Ubuntu_Reg.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/console.gd" type="Script" id=4]
[ext_resource path="res://objects/Outlet.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/ui_blur.gdshader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )
shader_param/blur_amount = 5.0
shader_param/mix_amount = 0.4
shader_param/color_over = Color( 0, 0, 0, 1 )

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="console" type="Node" parent="."]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -359.0
margin_right = 358.0
margin_bottom = 449.0
custom_fonts/font = ExtResource( 2 )
text = "Plug It In
Demo BUILD"
align = 1
valign = 1
uppercase = true

[node name="Options" type="CenterContainer" parent="CanvasLayer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Options"]
margin_left = 340.0
margin_top = 960.0
margin_right = 740.0
margin_bottom = 960.0
rect_min_size = Vector2( 400, 0 )

[node name="Play" type="Button" parent="CanvasLayer/Control/Options/VBoxContainer"]
visible = false
margin_right = 400.0
margin_bottom = 113.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Play"

[node name="Editor" type="Button" parent="CanvasLayer/Control/Options/VBoxContainer"]
visible = false
margin_top = 117.0
margin_right = 279.0
margin_bottom = 230.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Editor"

[node name="Quit" type="Button" parent="CanvasLayer/Control/Options/VBoxContainer"]
visible = false
margin_top = 234.0
margin_right = 279.0
margin_bottom = 347.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Quit"

[node name="Levels" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/Levels"]
material = SubResource( 2 )
margin_left = 432.0
margin_top = 901.0
margin_right = 647.0
margin_bottom = 1018.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Levels/PanelContainer"]
margin_right = 215.0
margin_bottom = 117.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/Levels/PanelContainer/VBoxContainer"]
margin_right = 215.0
columns = 4

[node name="Back" type="Button" parent="CanvasLayer/Control/Levels/PanelContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 215.0
margin_bottom = 117.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Back"

[node name="Node2D" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Node2D"]
current = true

[node name="Outlet" parent="Node2D" instance=ExtResource( 5 )]

[connection signal="pressed" from="CanvasLayer/Control/Options/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options/VBoxContainer/Editor" to="." method="_on_Editor_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Options/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Levels/PanelContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
